@@ -16,6 +16,7 @@ MBDyn 1.X-Devel
 		- added membrane element (Marco Morandini & Tommaso Solcia)
 		- added continuous contact constitutive law (Matteo Fancello)
 		- added inverse dynamics body for weight tailoring
+		- added "other" specifier to total pin joint input
 	Backward compatibility issues:
 	Known issues:
 		- Schur solver is broken
